--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation "androidx.annotation:annotation:$androidXLibraryVersion"
-    implementation "androidx.core:core:$androidXLibraryVersion"
+    implementation "androidx.fragment:fragment:$androidXLibraryVersion"
     implementation project(':api-public')
+    implementation 'moe.shizuku.privilege:api-base:12' // shizuku v2
 
     implementation 'me.weishu:free_reflection:1.2.0' // bypass hidden api restriction
 }
