--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,37 @@
-apply plugin: 'java-library'
+apply plugin: 'com.android.library'
+
+android {
+    compileSdkVersion rootProject.ext.targetSdkVersion
+    defaultConfig {
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName '1'
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', project(':api-shared').file('src/main/java'), project(':server-api').file('src/main/java')]
+        }
+    }
+}
+
+ext {
+    libraryName = 'Shizuku V3'
+    libraryDescription = 'Shizuku V3'
+    libraryVersion = project.rootProject.ext.apiLibraryVersion
+    artifact = "api"
+    bintrayName = "api"
+}
+
+apply from: project.rootProject.file('bintray.gradle')
 
 dependencies {
-    compileOnly files(rootProject.rootDir.absolutePath + '/android-27/android.jar')
-	compile project(':server-api')
+    implementation "androidx.annotation:annotation:$androidXLibraryVersion"
+    //compile project(':api-shared')
 }
