--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'moe.shizuku.privilege:api-base:12'
     implementation project(':shared')
-    implementation project(':api-public')
+    implementation project(':api')
     implementation project(':server-api')
 }
 
