--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -18,6 +18,11 @@ android {
             }
         }
     }
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java', project(':shared').file('src/main/java')]
+        }
+    }
     signingConfigs {
         sign
     }
@@ -97,9 +102,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'moe.shizuku.privilege:api-base:12'
-    implementation project(':shared')
     implementation project(':api')
-    implementation project(':server-api')
 }
 
 apply from: rootProject.file('signing.gradle')
