--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="moe.shizuku.sample">
 
-    <uses-permission android:name="moe.shizuku.manager.permission.API" android:maxSdkVersion="23"/>
+    <uses-permission
+        android:name="moe.shizuku.manager.permission.API"
+        android:maxSdkVersion="23" />
+
     <uses-permission-sdk-23 android:name="moe.shizuku.manager.permission.API_V23" />
     <uses-permission-sdk-23 android:name="moe.shizuku.manager.permission.EXEC_COMMAND" />
 
     <application
         android:allowBackup="false"
-        android:name=".Application"
+        android:name=".SampleApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -23,6 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="moe.shizuku.api.BinderReceiveProvider"
+            android:authorities="${applicationId}.shizuku"
+            android:multiprocess="false"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
     </application>
 
 </manifest>
