--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -17,6 +17,9 @@ android {
                 arguments '-DANDROID_STL=c++_static'
             }
         }
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
     sourceSets {
         main {
