--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -86,27 +86,27 @@ android.applicationVariants.all { variant ->
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    implementation "androidx.core:core:$androidXLibraryVersion"
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation "androidx.core:core:1.0.1"
     implementation "androidx.fragment:fragment:$androidXLibraryVersion"
     implementation "androidx.recyclerview:recyclerview:$androidXLibraryVersion"
     implementation "androidx.cardview:cardview:$androidXLibraryVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    implementation 'com.github.topjohnwu.libsu:core:2.3.1'
+    implementation 'com.github.topjohnwu.libsu:core:2.3.3'
     implementation "moe.shizuku.preference:preference:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-dialog-android:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-simplemenu:$preferenceLibraryVersion"
-    implementation "moe.shizuku.support:design:3.1.0"
-    implementation 'moe.shizuku.support:support-utils:3.0.4'
+    implementation "moe.shizuku.support:design:3.1.2"
+    implementation 'moe.shizuku.support:support-utils:3.0.6'
     implementation 'moe.shizuku.support:recyclerview-utils:3.0.4'
     implementation "moe.shizuku.support:htmlcompat:2.0.0"
     implementation 'moe.shizuku.fontprovider:api:10'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'moe.shizuku.privilege:api-base:12'
     implementation project(':api')
-    implementation 'me.weishu:free_reflection:1.2.0' // bypass hidden api restriction
+    implementation 'me.weishu:free_reflection:2.0.0' // bypass hidden api restriction
 }
 
 apply from: rootProject.file('signing.gradle')
