fix https://d.android.com/r/tools/task-configuration-avoidance warning

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -27,7 +27,7 @@ android.libraryVariants.all { variant ->
     task "${taskName}" {
         doLast { delete "${buildDir}/intermediates/javac/${variant.name}/compile${variant.name}JavaWithJavac/classes/android" }
     }
-    variant.processJavaResources.dependsOn(taskName)
+    variant.processJavaResourcesProvider.get().dependsOn(taskName)
 }
 
 ext {
