--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             </intent-filter>
         </receiver>
         <provider
-            android:name="moe.shizuku.api.BinderReceiveProvider"
+            android:name="moe.shizuku.api.ShizukuBinderReceiveProvider"
             android:authorities="${applicationId}.shizuku"
             android:multiprocess="false"
             android:enabled="true"
