--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -102,10 +102,9 @@ dependencies {
     implementation 'moe.shizuku.support:recyclerview-utils:3.0.4'
     implementation "moe.shizuku.support:htmlcompat:2.0.0"
     implementation 'moe.shizuku.fontprovider:api:10'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'moe.shizuku.privilege:api-base:12'
-    implementation 'moe.shizuku.privilege:api:3.0.0-alpha10'
+    implementation  project(':api')
     implementation 'me.weishu:free_reflection:2.1.0' // bypass hidden api restriction
 }
 
