--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'idea'
+
+idea.module {
+    excludeDirs += file('out')
+}
 
 buildscript {
+    ext.kotlinVersion = '1.3.61'
     repositories {
         jcenter()
         google()
+        maven { url 'http://storage.googleapis.com/r8-releases/raw' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools:r8:2.0.23'
+        classpath 'com.android.tools.build:gradle:4.0.0-alpha09'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -36,11 +44,9 @@ def gitCommitCount = Integer.parseInt('git rev-list --count HEAD'.execute([], pr
 def baseVersionName = '3.5.0'
 
 ext {
-    androidXLibraryVersion = '1.0.0'
-    preferenceLibraryVersion = '3.0.0'
-
     minSdkVersion = 21
-    targetSdkVersion = 28
+    targetSdkVersion = 29
     versionCode = gitCommitCount
     versionName = "${baseVersionName}.r${gitCommitCount}.${gitCommitId}"
+    kotlinCoroutinesVersion = '1.3.3'
 }
