control per-23 permission partly in server & fix sample

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,6 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets.main {
+        java.srcDirs = ["src/main/java", (project(':shared').file("src/main/java"))]
+    }
 }
 
 dependencies {
