--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
     implementation "androidx.annotation:annotation:1.1.0"
     implementation "androidx.fragment:fragment:1.2.0"
     implementation project(':api') // shizuku v3
