--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -89,16 +89,19 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutinesVersion"
 
-    compileOnly project(':hidden-api-common')
+    //compileOnly project(':hidden-api-common')
+    implementation project(':hidden-api-common-bridge')
     implementation project(':api')
     implementation project(':shared')
 
     implementation 'androidx.browser:browser:1.2.0'
     implementation "androidx.core:core:1.2.0"
     implementation "androidx.fragment:fragment:1.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 
     implementation 'com.github.topjohnwu.libsu:core:2.5.1'
 
@@ -108,7 +111,7 @@ dependencies {
 
     implementation "rikka.appcompat:appcompat:1.2.0-alpha02"
     implementation "rikka.core:core:1.1.0"
-    implementation "rikka.material:material:1.0.0"
+    implementation "rikka.material:material:1.1.0"
     implementation "rikka.html:html:1.0.0"
     implementation "rikka.recyclerview:recyclerview-utils:1.0.1"
 
