--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,29 +6,17 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
-        versionName '3.1.0-alpha2'
+        versionName rootProject.ext.apiVersionName
         manifestPlaceholders = [versionName: versionName]
         consumerProguardFiles 'consumer-rules.pro'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    sourceSets.main {
-        java.srcDirs = ["src/main/java", (project(':shared').file("src/main/java"))]
     }
 }
 
 dependencies {
     implementation "androidx.annotation:annotation:1.1.0"
-    implementation project(':shared')
+    implementation "moe.shizuku.privilege:shared:$apiVersionName"
     compileOnly project(':hidden-api-common')
 }
-
-group = 'rikka.annotation'
-version = android.defaultConfig.versionName
 
 project.ext {
     mavProjectName = 'api'
@@ -37,6 +25,5 @@ project.ext {
 
 group = 'moe.shizuku.privilege'
 version = android.defaultConfig.versionName
-
 
 apply from: rootProject.file('publish.gradle')
