--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,6 @@ ext {
     versionCode = gitCommitCount
     versionName = "${baseVersionName}.r${gitCommitCount}.${gitCommitId}"
     kotlinCoroutinesVersion = '1.3.3'
+
+    apiVersionName = '3.1.0-alpha2'
 }
