--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
     implementation "androidx.annotation:annotation:1.1.0"
     implementation "androidx.fragment:fragment:1.2.0"
-    implementation project(':api') // shizuku v3
+    implementation 'moe.shizuku.privilege:api:3.1.0-alpha3' // shizuku v3
 
     implementation 'me.weishu:free_reflection:2.2.0' // bypass hidden api restriction
 }
