--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,6 +12,10 @@ android {
     }
 }
 
+repositories {
+    mavenLocal()
+}
+
 dependencies {
     implementation "androidx.annotation:annotation:1.1.0"
     api "moe.shizuku.privilege:shared:$apiVersionName"
