--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ idea.module {
 }
 
 buildscript {
-    ext.kotlinVersion = '1.3.61'
+    ext.kotlinVersion = '1.3.71'
     repositories {
         jcenter()
         google()
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools:r8:2.0.23'
-        classpath 'com.android.tools.build:gradle:4.0.0-alpha09'
+        classpath 'com.android.tools.build:gradle:4.0.0-beta03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
@@ -52,5 +52,5 @@ ext {
     versionName = "${baseVersionName}.r${gitCommitCount}.${gitCommitId}"
     kotlinCoroutinesVersion = '1.3.3'
 
-    apiVersionName = '3.1.0-alpha4'
+    apiVersionName = '3.1.0'
 }
