--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools:r8:2.0.23'
-        classpath 'com.android.tools.build:gradle:4.0.0-beta03'
+        classpath 'com.android.tools.build:gradle:4.1.0-alpha09'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
@@ -48,9 +48,10 @@ def baseVersionName = '3.6.1'
 ext {
     minSdkVersion = 21
     targetSdkVersion = 29
+    ndkVersion = "21.1.6352462"
     versionCode = gitCommitCount
     versionName = "${baseVersionName}.r${gitCommitCount}.${gitCommitId}"
-    kotlinCoroutinesVersion = '1.3.3'
+    kotlinCoroutinesVersion = '1.3.5'
 
     apiVersionName = '3.1.0'
 }
