--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -68,6 +68,20 @@
             android:name=".settings.SettingsActivity"
             android:label="@string/action_settings" />
 
+        <activity
+            android:name=".authorization.Pre23AuthorizationActivity"
+            android:enabled="@bool/auth_activity_enabled"
+            android:excludeFromRecents="true"
+            android:exported="true"
+            android:permission="@string/permission"
+            android:theme="@style/GrantPermissions">
+            <intent-filter>
+                <action android:name="${applicationId}.intent.action.REQUEST_AUTHORIZATION" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <receiver
             android:name=".starter.BootCompleteReceiver"
             android:directBootAware="true"
@@ -102,62 +116,6 @@
             android:exported="true"
             android:multiprocess="false"
             android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
-
-        <!-- v2 components -->
-        <activity
-            android:name=".legacy.AuthorizationActivityV21"
-            android:enabled="@bool/auth_activity_enabled"
-            android:excludeFromRecents="true"
-            android:exported="true"
-            android:permission="@string/permission"
-            android:theme="@style/GrantPermissions">
-            <intent-filter>
-                <action android:name="${applicationId}.intent.action.REQUEST_AUTHORIZATION" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".legacy.AuthorizationActivityV23"
-            android:directBootAware="true"
-            android:enabled="@bool/auth_activity_v23_enabled"
-            android:excludeFromRecents="true"
-            android:exported="true"
-            android:permission="@string/permission"
-            android:theme="@style/GrantPermissions">
-            <intent-filter>
-                <action android:name="${applicationId}.intent.action.REQUEST_AUTHORIZATION" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".legacy.TokenReceiveActivity"
-            android:directBootAware="true"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL"
-            android:theme="@style/Translucent">
-            <intent-filter>
-                <action android:name="${applicationId}.intent.action.SERVER_STARTED" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <provider
-            android:name=".legacy.provider.TransferProvider"
-            android:authorities="moe.shizuku.manager.transferprovider"
-            android:directBootAware="true"
-            android:enabled="true"
-            android:exported="true"
-            tools:ignore="ExportedContentProvider" />
-        <provider
-            android:name=".legacy.provider.TokenProvider"
-            android:authorities="moe.shizuku.manager.tokenprovider"
-            android:directBootAware="true"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="@string/permission" />
 
     </application>
 
