--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -18,6 +18,9 @@ android {
             }
         }
     }
+    buildFeatures {
+        viewBinding = true
+    }
     signingConfigs {
         sign
     }
