raise min api version to 23
1. It's 2020
2. Make permission check much simpler
3. No user app that still supports 21/22

--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -52,6 +52,12 @@ android {
         exclude '/META-INF/*.kotlin_module'
         exclude '/kotlin/**'
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
+    dependenciesInfo {
+        includeInApk false
+    }
 }
 
 android.applicationVariants.all { variant ->
