--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         android:name=".ShizukuManagerApplication"
         android:allowBackup="false"
         android:directBootAware="true"
+        android:extractNativeLibs="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
